Fix results on mobile and jumpy jumpy nonsense

--- a/static/src/stylesheets/module/_search-tool.scss
+++ b/static/src/stylesheets/module/_search-tool.scss
@@ -50,12 +50,14 @@
     display: block;
     @include fs-headline(2);
 
-    @include mq($until: leftCol) {
+    @include mq(tablet, leftCol) {
         padding-left: $gs-gutter / 4;
     }
 
     .has-page-skin & {
-        padding-left: $gs-gutter / 4;
+        @include mq(wide) {
+            padding-left: $gs-gutter / 4;
+        }
     }
 
     &:hover,
