--- a/static/src/stylesheets/module/_weather.scss
+++ b/static/src/stylesheets/module/_weather.scss
@@ -205,11 +205,11 @@ $weather-large-size: 60px;
     .search-tool__input {
         width: 100%;
         @include fs-headline(2);
+        display: inline-block;
 
         @include mq($until: tablet) {
             border-bottom: 1px dotted colour(neutral-3);
             padding-bottom: $gs-baseline / 4;
-            margin-bottom: $gs-baseline;
         }
 
         @include mq(tablet) {
